--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "npm": "^8.3.0",
     "react": "^17.0.2",
+    "react-devtools": "^4.21.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
